2007-11-12  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.ThickClient/Banshee.Gui.Widgets/TrackInfoDisplay.cs:
	First pass at fixing a missing_pixbuf->not missing transition glitch;
	center the text on the middle of the cover art on the y-axis

2007-11-11  Aaron Bockover  <abock@gnome.org>

	* Nereid/Nereid/PlayerInterface.cs: Add the AccelGroup from 
	InterfaceActionService; tseng should be happy

	* Banshee.ThickClient/Banshee.Gui/GtkBaseClient.cs: Implement GUI 
	handler for Log

	* Banshee.ThickClient/Banshee.Gui/GlobalActions.cs: Enable the help links

	* Banshee.ThickClient/Banshee.Gui/PlaybackActions.cs: Implemented
	open locaiton and restart song

	* Banshee.ThickClient/Banshee.Gui.Dialogs/OpenLocationDialog.cs:
	* Banshee.Services/Banshee.Web/Browser.cs:
	* Banshee.Services/Banshee.Streaming/RadioTrackInfo.cs: 
	* Banshee.Services/Banshee.Playlists.Formats.Xspf:
	* Banshee.Services/Banshee.Playlists.Formats: Ported from old Banshee

2007-11-11  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.ThickClient/Banshee.Gui/GlobalActions.cs:
	* src/Core/Banshee.ThickClient/Resources/core-ui-actions-layout.xml:
	Added help menu

	* src/Core/Banshee.Core/Banshee.Streaming/StreamTagger.cs:
	* src/Core/Banshee.Core/Banshee.Collection/TrackInfo.cs: Removed legacy
	cover art lookup junk

	* src/Core/Banshee.ThickClient/Banshee.Gui.Dialogs/AboutDialog.cs: Ported
	the about dialog

	* src/Core/Banshee.Core/Banshee.Base/Paths.cs: Removed a bunch of
	old path stuff

	* src/Core/Banshee.Core/Banshee.Base/ConfigureDefines.cs.in: Finally nuked

	* src/Core/Banshee.Core/Banshee.Base/ProductInformation.cs: Moved over

	* build/TranslatorExtract.cs: Moved to build

2007-11-11  Aaron Bockover  <abock@gnome.org>

	* Core/Banshee.ThickClient/Banshee.Gui/GlobalActions.cs: 
	* Core/Banshee.ThickClient/Resources/core-ui-actions-layout.xml: Added
	import music

	* Core/Banshee.ThickClient/Banshee.Library.Gui/ImportDialog.cs: Ported
	the import music dialog
